Added hashmap tasks motivation

--- a/src/main/java/ru/faang/school/hashmap/task_1/ЗАДАЧА.md
+++ b/src/main/java/ru/faang/school/hashmap/task_1/ЗАДАЧА.md
@@ -16,3 +16,18 @@
     - вывода списка всех домов и их гербов
 
 Тестируйте вашу программу, выполняя различные операции с HashMap и убедитесь, что она работает корректно.
+# Почему эта задача полезна
+HashMap - самая популярная структура данных в разработке после списка. 
+Конкретно эта задача поможет лучше познакомиться с основными способами использования этой структуры данных, 
+чтобы впоследствии применять ее в своих программах более уверенно, т.к. на ее основе можно построить огромное количество
+хранилищ, которые работают крайне быстро, что очень важно для пользователей. 
+
+Эта задача станет маленьким шагом вперед на пути освоения принципов работы HashMap и реализации на этом базисе 
+гораздо более серьезных приложений (кэшей, индексов, поисковых структур данных и др.)
+Конкретно здесь главная задача: понять, что работа ведется по сути с массивом, где вместо индексов - строки. 
+Нужно привыкнуть к логике использования этой коллекции и увереннее взаимодействовать с ней. 
+
+В BigTech компаниях вы должны писать подобные задачи с закрытыми глазами.
+Поэтому мы и тренеруемся прямо сейчас на более простых примерах, чтобы расти постепенно до самого высокого уровня!
+
+# ПОДСКАЗКИ СМОТРИМ, ТОЛЬКО КОГДА ЧЕСТНО ПОРАБОТАЛИ СНАЧАЛА САМОСТОЯТЕЛЬНО, НО НЕ ПОШЛО СХОДУ
