--- a/src/main/java/ru/faang/school/hashmap/task_10/ЗАДАЧА.md
+++ b/src/main/java/ru/faang/school/hashmap/task_10/ЗАДАЧА.md
@@ -19,3 +19,11 @@
 5. Реализуйте метод для вывода информации о текущем состоянии кэша, используя обход массива Entry внутри HashMap. Выведите ID и значения объектов **`Data`**, а также время их последнего обращения.
 
 Тестируйте вашу программу, выполняя различные запросы и проверяя состояние кэша. Убедитесь, что ваша структура данных с кэшем корректно обрабатывает запросы и оптимизирует время доступа к данным
+# Почему эта задача полезна
+Эта одна из самых популярных задач на собеседованиях в Meta и Stripe. 
+Но более того: она великолепно развивает умение строить сложные структуры данных, которые невероятно сильно оптимизируют работу реально 
+больших приложений.
+
+LRU кэши применяются натурально в каждой большой системе, что только можно себе представить. И эта задача позволяет понять 
+на базовом уровне, как реализовывать подобные решения, чтобы создавать лучшие продукты в мире!
+# ПОДСКАЗКИ СМОТРИМ, ТОЛЬКО КОГДА ЧЕСТНО ПОРАБОТАЛИ СНАЧАЛА САМОСТОЯТЕЛЬНО, НО НЕ ПОШЛО СХОДУ
