--- a/src/main/java/ru/faang/school/hashmap/task_2/ЗАДАЧА.md
+++ b/src/main/java/ru/faang/school/hashmap/task_2/ЗАДАЧА.md
@@ -16,3 +16,12 @@
     - вывода списка всех книг и их местонахождения в библиотеке
 
 Тестируйте вашу программу, выполняя различные операции с HashMap и убедитесь, что она работает корректно, учитывая переопределенные методы equals и hashCode.
+# Почему эта задача полезна
+В этой задаче мы закрепляем знания, усвоенные через практику в первой, но также и добавляем работу с equals & hashCode
+Вопрос про эти два метода есть на 100% собеседований по Java на любую позицию от Junior до Senior.
+Именно поэтому важно сделать на них акцент и разобраться, почему мы их пишем в конкретном контексте
+
+В данном случае наши объекты - ключи в HashMap. А значит нужно и грамотно переопределить методы equals & hashCode
+Чем чаще вы работаете над такого рода задачками, тем лучше запоминаете, что это абсолютно необходимо делать, и затем 
+видите подобные моменты в своих собственных проектах без явного на них указания. Тогда вы по-настоящему понимаете, что вы делаете и почему именно так.
+# ПОДСКАЗКИ СМОТРИМ, ТОЛЬКО КОГДА ЧЕСТНО ПОРАБОТАЛИ СНАЧАЛА САМОСТОЯТЕЛЬНО, НО НЕ ПОШЛО СХОДУ
