--- a/src/main/java/ru/faang/school/hashmap/task_3/ЗАДАЧА.md
+++ b/src/main/java/ru/faang/school/hashmap/task_3/ЗАДАЧА.md
@@ -15,3 +15,15 @@
     - вывода списка всех студентов сгруппированных по факультетам и курсам
 
 Тестируйте вашу программу, выполняя различные операции с HashMap и убедитесь, что она работает корректно и эффективно группирует студентов по факультетам и курсам.
+# Почему эта задача полезна
+Группировка - одна из самых распространенных задач, которую помогает решить HashMap
+Она встречается повсюду: в алгоритмических задачах на собеседованиях в Google, а также в работе над конкретными проектами, 
+где появляется чуть более сложная структура данных, которую необходимо разбить на группы. Например, в Notion можно сгруппировать
+задачи по тэгам. Это делается через использование HashMap
+
+Именно поэтому мы и делаем эту задачу: она постоянно встречается в реализации разнообразных фичей из реальных приложений. 
+Поэтому очень важно понимать, как именно мы делаем такую группировку, как определяем ключи и значения, следим ли, чтобы эти ключи удовлетворяли
+всем требованиям и т.д.
+
+Эта задача позволит вам стать увереннее при реализации одной из самых популярных задач программирования в принципе.
+# ПОДСКАЗКИ СМОТРИМ, ТОЛЬКО КОГДА ЧЕСТНО ПОРАБОТАЛИ СНАЧАЛА САМОСТОЯТЕЛЬНО, НО НЕ ПОШЛО СХОДУ
