--- a/src/main/java/ru/faang/school/hashmap/task_4/ЗАДАЧА.md
+++ b/src/main/java/ru/faang/school/hashmap/task_4/ЗАДАЧА.md
@@ -15,3 +15,15 @@
     - вывода списка всех городов, для которых доступна информация о погоде в кэше
 
 Тестируйте вашу программу, выполняя различные операции с HashMap и убедитесь, что она работает корректно, предоставляя быстрый доступ к информации о погоде с использованием кэширования.
+# Почему эта задача полезна
+HashMap - ваш первый выбор для реализации кэшей в памяти. Кэш, это быстрое хранилище данных, обращение к которому дешевле и шустрее, 
+чем, например, к внешнему сервису или базе данных. Поэтому кэши используются очень часто. Есть распределенные (Redis), а есть кэши прямо в памяти. 
+
+И вот таким кэшем в памяти легко может стать HashMap. Чем раньше мы усвоим эту идею и будем пытаться находить возможности для 
+подобного кэширования в своих собственных приложениях, тем эффективнее и приятнее для реальных пользователей они получатся
+В больших системах в BigTech кэши - повсюду. И поэтому очень важно осознать их идею и научиться реализовывать простые. Потому что на самом деле это действительно просто HashMap
+
+Кроме того, в рамках этой задачи разбираемся с термином моков (заглушек). Это метод/класс, который на самом деле ничего не делает, 
+но предоставляет интерфейс для нашего основного класса, который "как будто" с ним взаимодействует, имитируя долгие операции. Эта техника постоянно 
+используется в unit тестировании. Мы обязательно поговорим о ней на буткемпе, но уже сейчас будет здорово немного разобраться с этим термином
+# ПОДСКАЗКИ СМОТРИМ, ТОЛЬКО КОГДА ЧЕСТНО ПОРАБОТАЛИ СНАЧАЛА САМОСТОЯТЕЛЬНО, НО НЕ ПОШЛО СХОДУ
