--- a/src/main/java/ru/faang/school/hashmap/task_6/ЗАДАЧА.md
+++ b/src/main/java/ru/faang/school/hashmap/task_6/ЗАДАЧА.md
@@ -16,3 +16,15 @@
 5. Реализуйте метод для вывода истории запросов пользователя, используя обход массива Entry внутри HashMap. Выведите имя пользователя и его запросы, отсортированные по времени создания запроса.
 
 Тестируйте вашу программу, выполняя различные операции с HashMap и убедитесь, что она корректно работает и обрабатывает данные о запросах пользователей. Учтите, что для корректной работы с ключами HashMap вам потребуется переопределить методы **`equals`** и **`hashCode`** для класса **`User`**.
+# Почему эта задача полезна
+Также в Google есть система рекомендаций на основе предыдущих запросов конкретного пользователя.
+С помощью разнообразных алгоритмических техник и ML они собираются из информации по всему поиску, но сначала ведь нужны исходные данные:
+запросы пользователя здесь и сейчас. 
+
+Их нужно эффективно разложить, чтобы ML сделал по ним выборку и запустил процесс своего обучения.
+Для повышения эффективности разбора этих данных их очень удобно сложить в HashMap и разбирать по конкретному пользователю
+(у них могут быть разные паттерны доступа и пр.)
+
+Поэтому здесь мы и делаем нечто подобное, чтобы понять, как такая простая структура данных, как HashMap интегрируется в глобальные задачи
+реально больших компаний и выдающихся проектов!
+# ПОДСКАЗКИ СМОТРИМ, ТОЛЬКО КОГДА ЧЕСТНО ПОРАБОТАЛИ СНАЧАЛА САМОСТОЯТЕЛЬНО, НО НЕ ПОШЛО СХОДУ
