--- a/src/main/java/ru/faang/school/hashmap/task_7/ЗАДАЧА.md
+++ b/src/main/java/ru/faang/school/hashmap/task_7/ЗАДАЧА.md
@@ -20,3 +20,16 @@
     - добавления студента к существующему предмету
     - удаления студента из предмета
     - вывода списка всех предметов и студентов, изучающих их
+# Почему эта задача полезна
+Эта задача помогает лучше понять, что структуры данных можно многослойно встраивать друг в друга 
+для оптимизации доступа к данным на разных уровнях и в разных представлениях. Дело в том, что поисковый запрос может выполняться
+не по одному признаку, а сразу по двум и более. Именно поэтому выгодно найти группу объектов по первичному признаку, а затем быстро в этой группе
+найти те, что удовлетворяют вторичному. 
+
+Своего рода вложенный кэш или индекс. Это частая техника для грамотного хранения данных, по которым может выполняться поиск
+в разнообразных формах. В результате из-за многослойного кэширования этот доступ будет оптимальным на всех уровнях, и пользователи
+будут получать стабильно быстрые ответы от преложения вне зависимости от сложности запроса
+
+Конечно, эта задача передает лишь базовую идею происходящего, но цель здесь именно научиться разглядывать подобные паттерны 
+доступа к данным и вспоминать об этой идее при реализации своих собственных больших систем.
+# ПОДСКАЗКИ СМОТРИМ, ТОЛЬКО КОГДА ЧЕСТНО ПОРАБОТАЛИ СНАЧАЛА САМОСТОЯТЕЛЬНО, НО НЕ ПОШЛО СХОДУ
