--- a/src/main/java/ru/faang/school/hashmap/task_8/ЗАДАЧА.md
+++ b/src/main/java/ru/faang/school/hashmap/task_8/ЗАДАЧА.md
@@ -17,3 +17,15 @@
 4. Реализуйте метод для вывода информации о всех событиях потока, используя обход массива Entry внутри HashMap. Выведите ID событий, типы событий и данные событий.
 
 Тестируйте вашу программу, добавляя новые события потока, выполняя поиск по ID и типу события, а также удаляя события из структуры данных. Убедитесь, что ваша потоковая структура данных корректно работает и позволяет обрабатывать события в реальном времени.
+# Почему эта задача полезна
+Обработка событий в реальном времени - задача, которая решается почти в каждой современной крупной системе. 
+В данном случае мы представляем простое хранилище данных о приходящих от пользователей событий в виде пары HashMap. 
+
+По сути эта задача - метафора на реальность, где все события, которые потребляются сервером, например, из Kafka, каким-либо 
+образом обрабатываются и где-либо сохраняются. Это может быть база данных, NoSql хранилище, кэш как Redis или же хранилище прямо в памяти, 
+как здесь мы делаем через HashMap.
+
+Эта задача помогает лучше познакомиться с терминологией обработки событий и развивает восприятие идеи их обработки в принципе.
+Вы будете делать нечто подобное очень часто на реальной работе, но в немного иных формах, возможно. Хотя где-то, вероятно, примените и HashMap
+для локального кэширования.
+# ПОДСКАЗКИ СМОТРИМ, ТОЛЬКО КОГДА ЧЕСТНО ПОРАБОТАЛИ СНАЧАЛА САМОСТОЯТЕЛЬНО, НО НЕ ПОШЛО СХОДУ
