--- a/src/main/java/ru/faang/school/hashmap/task_9/ЗАДАЧА.md
+++ b/src/main/java/ru/faang/school/hashmap/task_9/ЗАДАЧА.md
@@ -12,3 +12,14 @@
 5. Реализуйте метод для вывода информации о товарах в каждой категории, используя обход массива Entry внутри HashMap. Выведите категории товаров и их товары.
 
 Тестируйте вашу программу, добавляя товары в HashSet и выполняя группировку по категориям с помощью HashMap. Убедитесь, что ваша программа корректно группирует товары по категориям и выводит результаты на экран.
+# Почему эта задача полезна
+Очередная задача группировки элементов. Но на этот раз она прямо из реального мира: Amazon постоянно группирует свои товары.
+Это происходит и на складе, и на сайте, и затем в различных коммерческих материалах - повсюду. 
+И везде необходимо решать эту задачу группировки в совершенно разных формах. И здесь HashMap - просто незаменима.
+
+Разбирая эту задачу вы лучше поймете, как делается группировка данных, и когда ее удобно применить в своих собственных проектах.
+Разбиение данных на группы - это серьезная оптимизация с точки зрения представления их пользователям, а также обработки: вы можете работать 
+с каждой группой отдельно, выделяя определенным из них, например, больший приоритет => больше вычислительных ресурсов. 
+Такие подходы позволяют огромным корпорациям экономить миллионы долларов на оптимизации и приоритизации вычислений для определенных групп данных.
+И это то, что вы делаете здесь!
+# ПОДСКАЗКИ СМОТРИМ, ТОЛЬКО КОГДА ЧЕСТНО ПОРАБОТАЛИ СНАЧАЛА САМОСТОЯТЕЛЬНО, НО НЕ ПОШЛО СХОДУ
