--- a/src/main/java/ru/faang/school/hashmap/task_5/ЗАДАЧА.md
+++ b/src/main/java/ru/faang/school/hashmap/task_5/ЗАДАЧА.md
@@ -12,3 +12,15 @@
 5. Реализуйте метод для удаления веб-страницы из индекса по её URL.
 
 Тестируйте вашу программу, индексируя различные веб-страницы, выполняя поиск по ключевым словам и удаляя веб-страницы из индекса. Убедитесь, что ваш поисковой движок корректно работает и позволяет быстро находить веб-страницы по ключевым словам.
+# Почему эта задача полезна
+Эта задача помогает получить представление о том, как работает реально большая система: Google поиск.
+На самом деле они делают что-то похожее, но на гораздо более широком уровне: собирают все странички в интернете и каждое из 
+слов на этих страничках индексируют, сохраняя в специальные структуры данных для быстрого поиска. В нашем случае такой структурой 
+данных может вполне стать HashMap. По сути Google тоже используют нечто подобное для ускорения популярных запросов, например.
+
+Поэтому эта задача - по сути пример использования HashMap в реальном мире для по-настоящему огромной фичи, для целого проекта.
+Она поможет понять, как такая простая структура данных может быть применена для реализации действительно серьезных приложений.
+
+Все начинается с малых примеров, как этот. Но затем, понимая базис, мы переходим к приложению этих знаний в самых крутых
+проектах в мире!
+# ПОДСКАЗКИ СМОТРИМ, ТОЛЬКО КОГДА ЧЕСТНО ПОРАБОТАЛИ СНАЧАЛА САМОСТОЯТЕЛЬНО, НО НЕ ПОШЛО СХОДУ
