Added hashmap tasks hints

--- a/src/main/java/ru/faang/school/hashmap/task_10/ЗАДАЧА.md
+++ b/src/main/java/ru/faang/school/hashmap/task_10/ЗАДАЧА.md
@@ -1,4 +1,5 @@
 # LRU Cache
+# Задача со звездочкой
 Эта задача часто встречается на собеседованиях в BigTech, и является очень интересной, если постараться сделать ее максимально эффективно
 
 Создайте программу на Java для реализации структуры данных с кэшем, который будет сохранять данные после нескольких запросов с использованием HashMap.
@@ -14,7 +15,7 @@
     - добавления нового объекта **`Data`** в структуру данных
     - получения объекта **`Data`** по его ID:
         - если объект есть в кэше, верните его и обновите время последнего обращения
-        - если объекта нет в кэше, получите его из структуры данных, добавьте в кэш и обновите время последнего обращения
+        - если объекта нет в кэше, вернуть null
     - если кэш превышает **`CACHE_SIZE`**, удалите самый старый объект (с наименьшим временем последнего обращения) перед добавлением нового объекта
 5. Реализуйте метод для вывода информации о текущем состоянии кэша, используя обход массива Entry внутри HashMap. Выведите ID и значения объектов **`Data`**, а также время их последнего обращения.
 
