feat: added basic function web app for servers control

--- a/src/main/java/ru/faang/school/task_2/ЗАДАЧА.md
+++ b/src/main/java/ru/faang/school/task_2/ЗАДАЧА.md
@@ -6,7 +6,7 @@
 Требования:
 
 1. создать класс `Server`, который будет содержать следующие характеристики:
-    - `double load` - отражает текущцю нагрузку на сервер
+    - `double load` - отражает текущую нагрузку на сервер
     - `double maxLoad` - отражает максимальную нагрузку на сервер
     - `double energyConsumption` - отражает текущие энергозатраты сервера
 2. создать класс `DataCenter`, который будет хранить список серверов.
