--- a/src/main/java/ru/faang/school/hashmap/task_4/ЗАДАЧА.md
+++ b/src/main/java/ru/faang/school/hashmap/task_4/ЗАДАЧА.md
@@ -7,7 +7,10 @@
 
 1. Создайте класс **`WeatherData`**, который будет содержать поля **`city`** (город), **`temperature`** (температура) и **`humidity`** (влажность).
 2. В классе **`Main`**, создайте HashMap с ключом типа **`String`** (название города) и значением типа **`WeatherData`** (объект класса **`WeatherData`**).
-3. Реализуйте метод, который будет принимать название города и возвращать информацию о погоде в этом городе. Если информация о погоде для данного города присутствует в кэше (HashMap), верните эту информацию. В противном случае, имитируйте запрос к внешнему источнику (например, вызовите метод, который "получает" информацию о погоде), сохраните полученную информацию в кэше и верните ее.
+3. Реализуйте метод, который будет принимать название города и возвращать информацию о погоде в этом городе. Если инфор
+мация о погоде для данного города присутствует в кэше (HashMap), верните эту информацию. В противном случае, имитируйте 
+запрос к внешнему источнику (например, вызовите метод, который "получает" информацию о погоде), сохраните полученную 
+информацию в кэше и верните ее.
    Внешний сервис - просто мок-класс с пустым методом-заглушкой
 4. Реализуйте методы для следующих действий:
     - обновления информации о погоде в кэше для определенного города
