--- a/src/main/java/ru/faang/school/hashmap/task_5/подсказки/Подсказка_3.md
+++ b/src/main/java/ru/faang/school/hashmap/task_5/подсказки/Подсказка_3.md
@@ -1,4 +1,5 @@
 Удаление по URL должно ведь удалить страницу из всех-всех групп страниц по ключевым словам!
-Наивное решение: пройтись по всем группам и внутри каждой группы пройтись по всем страницам, сравнивая url
+Наивное решение: пройтись по всем группам и внутри каждой группы пройтись по всем страницам,
+сравнивая url
 
 Можно ли сделать это быстрее? Можно ли добавить еще одну HashMap для оптимизации этой работы?
